--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,6 @@
 {
-    "rules": {
-        "indent": [
-            2,
-            "tab"
-        ],
-        "quotes": [
-            2,
-            "double"
-        ],
-        "linebreak-style": [
-            2,
-            "windows"
-        ],
-        "semi": [
-            2,
-            "always"
-        ]
-    },
-    "env": {
-        "browser": true
-    },
-    "extends": "eslint:recommended"
+    "extends": "standard",
+    "plugins": [
+        "standard"
+    ]
 }
