--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "uNkNowN92",
   "license": "ISC",
   "devDependencies": {
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
