--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-ng-annotate": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
+    "gulp-header": "^1.7.1",
     "jshint": "^2.9.1-rc1"
   }
 }
