--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Paged List Library using KnockoutJS and jQuery",
   "author": "uNkNowN92",
+  "homepage": "https://github.com/uNkNowN92-git/knockout-paged-list/",
   "license": "ISC",
   "devDependencies": {
     "eslint-config-standard": "^4.4.0",
