--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Paged List Library using KnockoutJS and jQuery",
   "author": "uNkNowN92",
   "homepage": "https://github.com/uNkNowN92-git/knockout-paged-list/",
+  "repository": "https://github.com/uNkNowN92-git/knockout-paged-list/",
   "license": "ISC",
   "devDependencies": {
     "eslint-config-standard": "^4.4.0",
