--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "knockout-paged-list",
   "version": "1.0.1",
-  "description": "Paged List Library using KnockoutJS and jQuery",
+  "description": "A KnockoutJS Plugin for Paged List/Grid",
   "author": "uNkNowN92",
   "homepage": "https://github.com/uNkNowN92-git/knockout-paged-list/",
   "repository":
